--- a/package.json
+++ b/package.json
@@ -11,12 +11,18 @@
     "typecheck": "tsc"
   },
   "dependencies": {
+    "@remix-run/express": "^2.8.1",
     "@remix-run/node": "^2.8.1",
     "@remix-run/react": "^2.8.1",
     "@remix-run/serve": "^2.8.1",
+    "axios": "^1.6.8",
+    "cross-env": "^7.0.3",
+    "express": "^4.19.2",
     "isbot": "^4.1.0",
+    "node-fetch": "^3.3.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "remix": "^2.8.1"
   },
   "devDependencies": {
     "@remix-run/dev": "^2.8.1",
